# algo_challenge

./: .gitignore  Cargo.toml  README.md  build.rs
src/: client.rs  grpc.rs  main.rs  main.rs_0  server.rs  streaming.rs  test_grpc.rs  test_main.rs  test_ws.rs  types.rs
src/bitstamp/: client.rs  client_binance.rs  mod.rs
src/exchange/: binance_client.rs  bitstamp_client.rs  error.rs  mod.rs  types.rs
test/: json.ipynb
