[package]
name = "algo_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
url = "*"
futures-channel = "*"
async-stream = "0.3"
tracing = "0.1"

# tungstenite = "0.13", features = ["]
# reqwest = "0.11"
