[package]
name = "algo_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "test_ws"
path = "src/test_ws.rs"

[[bin]]
name = "grpc"
path = "src/grpc.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tonic = "0.9"
prost = "0.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] } # ["rustls-tls-webpki-roots"]
tracing = "0.1"
async-stream = "0.3"
rand = "0.8"
url = "*"
futures-channel = "*"
tokio-stream = { version = "0.1"}

[build-dependencies]
tonic-build = "0.9"